Mis à jour de la responsivité

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 			<!-- menu de navigation -->
 			<div>
 				<nav>
-					<label for="drop">Menu</label>
+					<label for="drop"><i class="fas fa-bars"></i> Menu</label>
 					<input type="checkbox" id="drop" />
 					<ul>
 						<li><a href="index.html"><i class="fas fa-home"></i> Accueil</a></li>
 						<li><a href="#about"><i class="fas fa-info"></i> A Propos</a></li>
 						<li><a href="#services"><i class="fas fa-user-md"></i> Services</a></li>
-						<li>
+						<li id="list">
 							<!-- Menu deroulant -->
 							<label for="drop-2">Application <i class="fas fa-angle-down"></i></label>
 							<input type="checkbox" id="drop-2" />
@@ -47,8 +47,8 @@
 								<li><a href="#appointment">Réserver en ligne</a></li>
 							</ul>
 						</li>
-						<li><a href="#doctors"><i class="fas fa-users"></i> Equipe</a></li>
-						<li><a href="#contact"><i class="fas fa-id-card"></i> Contact</a></li>
+						<li id="squad"><a href="#doctors"><i class="fas fa-users"></i> Equipe</a></li>
+						<li id="ctc"><a href="#contact"><i class="fas fa-id-card"></i> Contact</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -265,7 +265,7 @@
 						</a>
 					</div>
 					<div class="description">
-						<span>Février 20, 2021 - blog</span>
+						<span>Février 20, 2021 - blog</span><br>
 						<a href="#">TEST COVID A DOMICILE</a>
 						<p>Découvez comment éviter les files d'attentes avec le test PCR à domicile</p>
 					</div>
@@ -278,7 +278,7 @@
 						</a>
 					</div>
 					<div class="description">
-						<span>Février 20, 2021 - blog</span>
+						<span>Février 20, 2021 - blog</span><br>
 						<a href="#">L'APPLICATION VERSION 2.0</a>
 						<p>Découvrez les nouveautés de la nouvelle interface de l'appli</p>
 					</div>
@@ -291,7 +291,7 @@
 						</a>
 					</div>
 					<div class="description">
-						<span>Février 20, 2021 - blog</span>
+						<span>Février 20, 2021 - blog</span><br>
 						<a href="#">SUIVI INTELLIGENT</a>
 						<p>Des statistiques avancées sur comment nous rendons la prise de rendez-vous facile pour tous</p>
 					</div>
