première mise à jour de la responsivité

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 		<!-- //Pied de page -->
 
 		<!-- Copyright -->
-		<p> © 2021 Gravizen. Tout droit réservés | Par Pseudo </p>
+		<p> © 2021 Gravizen. Tout droit réservés | Par Dioufinho </p>
 		
 		<a href="#home">
 			<span aria-hidden="true"></span>
